// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`firebase reducer auth 1`] = `
Object {
  "auth": true,
  "signup": false,
  "userid": "",
}
`;

exports[`firebase reducer default 1`] = `
Object {
  "auth": false,
  "signup": false,
  "userid": "",
}
`;
